Fix on eventlistener halo items position
Showing the connector at top right instead of right halobar, to avoid overlap with longer eventlistener names

--- a/app/styles/modeleditors/case/halo/halo.css
+++ b/app/styles/modeleditors/case/halo/halo.css
@@ -24,6 +24,12 @@
   height: 24px;
 }
 
+.halobar.top-right {
+  top: -24px;
+  height: 24px;
+  right: -12px;
+}
+
 .halobar.left {
   top: -10px;
   left: -24px;
