--- a/app/styles/editors/jsoneditor.css
+++ b/app/styles/editors/jsoneditor.css
@@ -3,6 +3,19 @@
     height: 500px;
 }
 
+.task-preview {
+    width: 400px;
+    height: 300px;
+}
+
+.taskpreview {
+    width: 100%;
+    height: 100%;
+    zoom: 0.70;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 .jsoneditor .standardformcontainer {
     bottom: 0px;
     background-color: #F5F5F5;
