--- a/app/styles/modeleditors/humantask/humantaskmodeleditor.css
+++ b/app/styles/modeleditors/humantask/humantaskmodeleditor.css
@@ -2,31 +2,33 @@
     background-color: #f5f5f5 !important;
     position: absolute;
     /* needed for tabs: | Editor | Source | */
-    top: 33px; 
+    top: 33px;
     bottom: 0px;
     left: 0px;
     right: 0px;
     border: 0px;
 }
 
-.humantask-model-editor>div {
-    position: absolute;
+.humantask-model-editor .left-pane {
+    padding-top: 10px;
+    margin-left: 10px;
     left: 10px;
     right: 10px;
+    position: absolute
 }
 
 /*name and description fields*/
-.modelgenericfields {
+.humantask-model-editor .modelgenericfields {
     top: 10px;
 }
 
-.modelgenericfields div label:first-child,
-.modelgenericfields div input:first-child {
+.humantask-model-editor .modelgenericfields div label:first-child,
+.humantask-model-editor .modelgenericfields div input:first-child {
     width: 200px;
 }
 
-.modelgenericfields div label:last-child,
-.modelgenericfields div input:last-child {
+.humantask-model-editor .modelgenericfields div label:last-child,
+.humantask-model-editor .modelgenericfields div input:last-child {
     width: 417px;
 }
 
@@ -36,6 +38,12 @@
     bottom: 10px;
     width: 620px;
     position: absolute;
+}
+
+.humantask-model-editor .json-error-description {
+    color: red;
+    font-weight: bold;
+    padding-left: 30px;
 }
 
 .humantask-model-editor .code-mirror-source {
@@ -66,7 +74,7 @@
     margin-right: 30px;
     padding-right: 30px;
     padding-left: 30px;
-    background-color:#f5f5f5;
+    background-color: #f5f5f5;
 }
 
 .humantask-model-editor .task-preview-header {
@@ -88,5 +96,5 @@
     /* put a light border around the actual preview */
     border: 1px solid rgb(169, 169, 169);
     /* let the content scroll */
-    overflow:auto;
+    overflow: auto;
 }
