Simple alpaca error handler
This avoids the big red text in the IDE footer

--- a/app/styles/modeleditors/humantask/humantaskmodeleditor.css
+++ b/app/styles/modeleditors/humantask/humantaskmodeleditor.css
@@ -98,3 +98,9 @@
     /* let the content scroll */
     overflow: auto;
 }
+
+.alpaca-error-description {
+    color: red;
+    font-weight: bold;
+    padding-left: 30px;
+}
