--- a/app/styles/properties/properties.css
+++ b/app/styles/properties/properties.css
@@ -24,6 +24,8 @@
 
 .pinned {
     box-shadow: inset 0 10px 10px rgba(0, 0, 0, .5);
+    border: 1px solid white;
+    top: 1px;
 }
 
 .properties-container {
